--- a/css/styles.css
+++ b/css/styles.css
@@ -163,7 +163,24 @@ a {
 /* MAIN */
 /* HERO */
 
+.hero {
+  max-width: 1600px;
+  height: 600px;
+  margin-right: auto;
+  margin-left: auto;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.8),
+      rgba(47, 48, 58, 0.8)
+    ),
+    url("../images/header-img.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 .hero .container {
+  padding-top: 200px;
+  padding-bottom: 200px;
   text-align: center;
 }
 .hero h1 {
@@ -661,7 +678,14 @@ a {
   letter-spacing: 0.06em;
   color: var(--light-color);
 }
-
+/*.subscribe .[type="submit"]::after {
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
+  background-color: #fff;
+  background-image: url("../images/svg/icon-send.svg");
+  content: "";
+}*/
 .footer p {
   margin: 0px;
   margin-left: auto;
