--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,8 @@ a {
 }
 .address-header .e-mail,
 .address-header .phone {
+  display: flex;
+  align-items: center;
   font-family: var(--font-family);
   list-style-type: none;
   font-style: normal;
@@ -160,6 +162,30 @@ a {
 .address-header a:focus {
   color: var(--accent-color);
 }
+.address-header .e-mail::before {
+  display: inline-block;
+  width: 16px;
+  height: 11px;
+  margin-right: 10px;
+  background-color: var(--primary-bg-color);
+  background-image: url("../images/svg/icon-e-mail.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  content: "";
+}
+.address-header .phone::before {
+  display: inline-block;
+  width: 10px;
+  height: 15px;
+  margin-right: 10px;
+  align-content: center;
+  background-color: var(--primary-bg-color);
+  background-image: url("../images/svg/icon-phone.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  content: "";
+}
+
 /* MAIN */
 /* HERO */
 
@@ -234,11 +260,37 @@ a {
   margin: 0px;
   padding-left: 0px;
 }
-.advantages li {
+/*
+.advantages .list-item::before {
+  display: block;
+  height: 120px;
+  background-color: rgba(245, 244, 250, 0.5);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  content: "";
+  border-radius: 4px;
+}
+.list-item:nth-child(1)::before {
+  background-image: url("./images/svg/icon-1.svg");
+  content: "";
+  background-position: center;
+  background-size: contain;
+}
+.list-item:nth-child(2):: {
+  background-image: url("./images/svg/icon-2.svg");
+}
+.list-item:nth-child(3):: {
+  background-image: url("./images/svg/icon-3.svg");
+}
+.list-item:nth-child(4):: {
+  background-image: url("./images/svg/icon-4.svg");
+}*/
+.advantages .list-item {
   margin-right: 30px;
   width: calc((100% - 30px * 3) / 4);
 }
-.advantages li:last-child {
+.advantages .list-item:last-child {
   margin-right: 0px;
 }
 .advantages .hidden {
@@ -248,6 +300,7 @@ a {
 .advantages .title {
   margin-top: 0px;
   margin-bottom: 10px;
+  margin-top: 30px;
   font-family: var(--font-family);
   font-style: normal;
   font-weight: bold;
@@ -369,10 +422,33 @@ a {
 .team .team-list:last-child {
   margin-right: 0px;
 }
+.soc-cont .link {
+  font-size: 16px;
+} /*
 .team .soc-cont {
-  font-size: 15px;
+  content: "";
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+  background-repeat: no-repeat;
+  background-color: #fff;
+  background-position: center;
+  border-radius: 50%;
+  bottom: 2px solid red;
 }
 
+.team .soc-cont:nth-child(1) {
+  background-image: url("../images/svg/icon-instagram.svg");
+}
+.team .soc-cont:nth-child(2) {
+  background-image: url("../images/svg/icon-twitter.svg");
+}
+.team .soc-cont:nth-child(3) {
+  background-image: url("../images/svg/icon-facebook.svg");
+}
+.team .soc-cont:nth-child(4) {
+  background-image: url("../images/svg/icon-linkedin.svg");
+}*/
 /* CUSTOMERS */
 .customers {
   padding-bottom: 94px;
@@ -528,8 +604,7 @@ a {
   display: flex;
   align-items: baseline;
   padding-top: 45px;
-  padding-bottom: 28px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  padding-bottom: 60px;
 }
 .footer .card {
   flex-direction: column;
@@ -537,7 +612,7 @@ a {
 /* LOGO FOOTER*/
 
 .logo-footer {
-  margin-bottom: 8px;
+  margin-bottom: 20px;
 }
 .logo-footer .logo-blue {
   font-family: var(--logo-font-family);
@@ -640,6 +715,7 @@ a {
   text-transform: uppercase;
   color: var(--light-color);
 }
+
 .subscribe [type="text"] {
   margin-right: 12px;
   width: 358px;
@@ -658,7 +734,7 @@ a {
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-}
+} /*
 .subscribe [type="submit"] {
   width: 196px;
   height: 50px;
@@ -673,12 +749,42 @@ a {
   font-size: 16px;
   line-height: 30px;
   /* identical to box height, or 187% */
-  align-items: center;
+/*align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
   color: var(--light-color);
+}*/
+.footer .buttom {
+  display: inline-block;
+  /*margin-top: 430px;*/
+  padding: 10px 32px;
+  background-color: var(--accent-color);
+  width: 196px;
+  height: 50px;
+  border-radius: 4px;
+  font-family: var(--font-family);
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 30px;
+  /* identical to box height, or 187% */
+  letter-spacing: 0.06em;
+  color: var(--light-color);
 }
-/*.subscribe .[type="submit"]::after {
+/*
+.form .buttom::after {
+  height: 24px;
+  width: 24px;
+  background-color: #fff;
+  background-image: url(../images/svg/icon-send.svg);
+  content: "";
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}*/
+/*
+.subscribe [type="submit"]::after {
+  display: block;
   width: 24px;
   height: 24px;
   margin-left: 10px;
@@ -686,21 +792,3 @@ a {
   background-image: url("../images/svg/icon-send.svg");
   content: "";
 }*/
-.footer p {
-  margin: 0px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0px;
-  padding-top: 18px;
-  padding-bottom: 21px;
-  font-family: var(--font-family);
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 24px;
-  /* or 200% */
-  text-align: center;
-  align-items: center;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.4);
-}
