SVG sprite update

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,14 @@ html {
   margin: 0px;
   padding: 0px;
 }
-
+/*.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}*/
 *,
 *::before,
 *::after {
@@ -66,6 +73,16 @@ a {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-color);
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 /* HEADER */
 .page-header .container {
@@ -162,7 +179,19 @@ a {
 .address-header a:focus {
   color: var(--accent-color);
 }
-.address-header .e-mail::before {
+.icon-address-header {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+  margin-right: 10px;
+}
+.icon-address-header:last-child {
+  margin-right: 0px;
+}
+/*.address-header .e-mail::before {
   display: inline-block;
   width: 16px;
   height: 11px;
@@ -185,7 +214,7 @@ a {
   background-repeat: no-repeat;
   content: "";
 }
-
+*/
 /* MAIN */
 /* HERO */
 
@@ -261,6 +290,7 @@ a {
   padding-left: 0px;
 }
 
+/*
 .advantages .list-item::before {
   display: block;
   width: 100%;
@@ -285,6 +315,11 @@ a {
 }
 .advantages .list-item:nth-child(4)::before {
   background-image: url("../images/svg/icon-4.svg");
+}*/
+.advantages svg {
+  background-color: #f5f4fa;
+  width: 100%;
+  border-radius: 4px;
 }
 .advantages .list-item {
   margin-right: 30px;
@@ -398,7 +433,7 @@ a {
   padding: 1px 1px;
   border-radius: 10px;
   font-family: var(--font-family);
-  color: var(--text-color);
+  color: #afb1b8;
 }
 .team .link:hover,
 .team .link:focus {
@@ -444,7 +479,15 @@ a {
 .team-list .soc-cont:focus {
   background-color: var(--accent-color);
 }
-.team-list .soc-cont:nth-child(1) {
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
+/*.team-list .soc-cont:nth-child(1) {
   background-image: url("../images/svg/icon-instagram.svg");
 }
 .team-list .soc-cont:nth-child(2) {
@@ -456,7 +499,7 @@ a {
 .team-list .soc-cont:nth-child(4) {
   background-image: url("../images/svg/icon-linkedin.svg");
 }
-
+*/
 /* CUSTOMERS */
 .customers {
   padding-top: 94px;
@@ -478,7 +521,7 @@ a {
 .customers li:last-child {
   margin-right: 0px;
 }
-.customers .list-item::before {
+/*.customers .list-item::before {
   content: "";
   background-color: #ffffff;
   display: block;
@@ -513,7 +556,8 @@ a {
 .customers .list-item:nth-child(6)::before {
   background-image: url("../images/svg/logo-6.svg");
   background-size: auto;
-}
+}*/
+
 /* PORTFOLIO */
 
 /* PORTFOLIO SORTING */
@@ -575,11 +619,24 @@ a {
   margin: 0px;
   margin-bottom: -30px;
 }
+/*.portfolio-info li::before {
+  content: "";
+  width: 100%;
+  background-color: #ffffff;
+  height: auto;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.portfolio-info li:nth-child(1) {
+  background-image: url(../images/portfolio-1.jpg);
+}*/
 .portfolio-info li {
   width: calc((100% - 30px * 2) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
   padding-bottom: 20px;
+  border: 1px solid #eeeeee;
 }
 .portfolio-info li:hover {
   background: #ffffff;
@@ -598,7 +655,7 @@ a {
   font-size: 0;
 }
 .portfolio-info .text {
-  /*visibility: hidden;*/
+  display: none;
   font-size: 0;
   margin-top: 0px;
   margin-bottom: 0px;
@@ -611,9 +668,9 @@ a {
   letter-spacing: 0.03em;
   color: var(--light-color);
 }
-.portfolio-info .text:hover {
+/*.portfolio-info .text:hover {
   background: rgba(33, 150, 243, 0.9);
-}
+}*/
 .portfolio-info .title {
   margin-top: 0px;
   margin-bottom: 4px;
@@ -756,7 +813,16 @@ a {
 .social li:focus {
   background-color: var(--accent-color);
 }
-.social li:nth-child(1) {
+.icon-soc {
+  display: flex;
+  justify-self: center;
+  width: 2em;
+  height: 2em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
+/*.social li:nth-child(1) {
   background-image: url("../images/svg/icon-instagram.svg");
 }
 .social li:nth-child(2) {
@@ -767,7 +833,7 @@ a {
 }
 .social li:nth-child(4) {
   background-image: url("../images/svg/icon-linkedin.svg");
-}
+}*/
 
 /* SUBSCRIBE */
 .subscribe {
@@ -843,7 +909,15 @@ a {
   line-height: 30px;
   letter-spacing: 0.06em;
 }
-
+.icon-send {
+  display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
+/*
 .footer .buttom::after {
   height: 24px;
   width: 24px;
@@ -853,7 +927,7 @@ a {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-}
+}*/
 /*
 .subscribe [type="submit"]::after {
   display: block;
