--- a/css/styles.css
+++ b/css/styles.css
@@ -458,13 +458,36 @@ a {
   padding: 0px;
   margin: 0px;
 }
-.customers li {
-  text-align: center;
+.customers .list-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: calc((100% - 30px * 4) / 5);
+  height: 90px;
+  border: 1px solid #afb1b8;
+  box-sizing: border-box;
+  border-radius: 4px;
   margin-right: 30px;
+  color: #afb1b8;
 }
-.customers li:last-child {
+.customers .list-item:last-child {
   margin-right: 0px;
+}
+.customers .icon-customers {
+  width: auto;
+  height: auto;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
+.customers .list-item:hover,
+.customers .list-item:focus {
+  border: 1px solid var(--accent-color);
+}
+.customers .icon-customers:hover,
+.customers .icon-customers:focus {
+  stroke: var(--accent-color);
+  fill: var(--accent-color);
 }
 
 /* PORTFOLIO */
