--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,23 @@ a {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+.buttom {
+  display: inline-flex;
+  align-items: center;
+  padding: 10px 28px;
+  justify-content: space-between;
+  background-color: var(--accent-color);
+  color: var(--light-color);
+  width: 196px;
+  height: 50px;
+  border-radius: 4px;
+  font-family: var(--font-family);
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+}
 /* HEADER */
 .page-header .container {
   display: flex;
@@ -229,28 +246,10 @@ a {
   text-transform: uppercase;
   color: var(--light-color);
 }
-.hero .box {
+.hero .buttom {
   margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
-  /*margin-top: 430px;*/
-  padding: 10px 32px;
-  background-color: var(--accent-color);
-  width: 200px;
-  height: 50px;
-  border-radius: 4px;
-  font-family: var(--font-family);
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 30px;
-  /* identical to box height, or 187% */
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.05em;
-  /*по макету 0.06, но тогда в две строки*/
-  color: var(--light-color);
 }
 
 /* ADVANTAGES */
@@ -396,6 +395,7 @@ a {
 }
 .team ul {
   display: flex;
+  justify-content: center;
   padding: 0px;
   margin: 0px;
 }
@@ -410,9 +410,6 @@ a {
 }
 .team-list:last-child {
   margin-right: 0px;
-}
-.team-list ul {
-  justify-content: center;
 }
 .team-list .link {
   display: flex;
@@ -455,23 +452,37 @@ a {
 }
 .customers ul {
   display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0px;
   margin: 0px;
 }
 .customers .list-item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: calc((100% - 30px * 4) / 5);
   height: 90px;
-  border: 1px solid #afb1b8;
-  box-sizing: border-box;
-  border-radius: 4px;
   margin-right: 30px;
-  color: #afb1b8;
+  background-color: var(--light-color);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 .customers .list-item:last-child {
   margin-right: 0px;
+}
+.customers .link {
+  width: 100%;
+  height: 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  color: #afb1b8;
+}
+.customers .link:hover,
+.customers .link:focus {
+  border: 1px solid var(--accent-color);
+  color: var(--accent-color);
 }
 .customers .icon-customers {
   width: auto;
@@ -479,15 +490,6 @@ a {
   stroke-width: 0;
   stroke: currentColor;
   fill: currentColor;
-}
-.customers .list-item:hover,
-.customers .list-item:focus {
-  border: 1px solid var(--accent-color);
-}
-.customers .icon-customers:hover,
-.customers .icon-customers:focus {
-  stroke: var(--accent-color);
-  fill: var(--accent-color);
 }
 
 /* PORTFOLIO */
@@ -682,6 +684,10 @@ a {
 .address-footer li:last-child {
   margin-bottom: 0px;
 }
+.address-footer a:hover,
+.address-footer a:focus {
+  color: var(--accent-color);
+}
 
 /* SOCIAL */
 .social {
@@ -782,42 +788,6 @@ a {
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-} /*
-.subscribe [type="submit"] {
-  width: 196px;
-  height: 50px;
-  margin: 0px;
-  padding: 10px 62px 10px 29px;
-  background-color: var(--accent-color);
-  border: none;
-  border-radius: 4px;
-  font-family: var(--font-family);
-  font-style: normal;
-  font-weight: 900;
-  font-size: 16px;
-  line-height: 30px;
-  /* identical to box height, or 187% */
-/*align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--light-color);
-}*/
-.footer .buttom {
-  display: inline-flex;
-  align-items: center;
-  padding: 10px 28px;
-  justify-content: space-between;
-  background-color: var(--accent-color);
-  color: var(--light-color);
-  width: 196px;
-  height: 50px;
-  border-radius: 4px;
-  font-family: var(--font-family);
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 30px;
-  letter-spacing: 0.06em;
 }
 .icon-send {
   display: inline-block;
